[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.sources]
#"reputils" = "reputils"

[tool.hatch.build]
# ignore-vcs = true
#only-packages = true
packages = ["jwtjwkhelper"]
#packages = ["reputils", "tests"]
#artifacts = [
#  "pytest.ini",
#  ".mypy.ini"
#]
#include = [
#    "pytest.ini",
#    ".mypy.ini",
#]
#exclude = [
#  ".gitignore"
#]

[project]
name = "jwtjwkhelper"
version = "0.0.4"
authors = [
  { name="Henning Thieß", email="ht@xomox.cc" },
]
description = "JWTJWKHelper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'loguru==0.6.0',
    'pyjwt==2.6.0',
    'jwcrypto==1.4.2'
]

#[project.optional-dependencies]
#tests = [
#    'pytest==7.1.3'
#]

# pre-commit==2.20.0
#
## linting
#isort==5.10.1
#black==22.10.0
#mypy==0.982
#
#pytest==7.1.3
#
## local black-connect-daemon
#aiohttp==3.8.3
#
## mypy-stubs
#types-python-dateutil==2.8.19.4

[project.urls]
"Homepage" = "https://github.com/vroomfondel/jwtjwkhelper"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

