[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# ignore-vcs = true
#only-packages = true
packages = ["jwtjwkhelper"]
#packages = ["reputils", "tests"]
#artifacts = [
#  "pytest.ini",
#  ".mypy.ini"
#]
#include = [
#    "pytest.ini",
#    ".mypy.ini",
#]
#exclude = [
#  ".gitignore"
#]

[project]
name = "jwtjwkhelper"
version = "0.0.7"
authors = [
  { name="Henning Thieß", email="ht@xomox.cc" },
]
description = "JWTJWKHelper"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'loguru>=0.7.3',
    'pyjwt>=2.10.1',
    'jwcrypto>=1.5.6',
    'pytz>=2025.2'
]

#[project.optional-dependencies]
#tests = [
#    'pytest==7.1.3'
#]


[project.urls]
"Homepage" = "https://github.com/vroomfondel/jwtjwkhelper"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

